# URL-Shortener-Tracker

./: README.md
api/: .env.example  .gitignore  Dockerfile  cache.py  config.py  db.py  db_init.py  docker-compose.yml  ignore-Dockerfile  ignore-docker-compose.yml  main.py  pyproject.toml  railway.json  schemes.py  security.py  tasks.py
api/models/: __init__.py  association.py  category.py  enums.py  short_url.py  url_visit_action.py
api/req/: base.txt
api/routers/: admin.py  analytical.py  category.py  redirect.py  shorten.py
api/services/: shortener.py
api/tests/: conftest.py  test_admin_create.py  test_redirect.py  test_tracker.py
api/utils/: __init__.py  generate_short_code.py  get_client_ip.py  get_ip_data.py
panel/: .env.example  README.md  index.html  package.json  tailwind.config.js
panel/src/: main.ts
panel/src/assets/: base.css
panel/src/components/: VideoPreview.vue  VisitMap.vue
panel/src/components/form/: UrlForm.vue
panel/src/layouts/: default.vue
panel/src/router/: index.ts
panel/src/stores/: theme.ts  url_form_store.ts
panel/src/views/: AddUrlView.vue  BaseView.vue  CategoryManage.vue  TextView.vue  UrlView.vue  UrlVisitView.vue
